--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 /* Weather Styles */
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.loading {
+  opacity: 1;
+}
 .weather {
   width: 90%;
   max-width: 750px;
@@ -13,6 +25,7 @@
   width: 100%;
   height: fit-content;
   margin-top: 20px;
+  position: relative;
 }
 /* CityLinks Styles */
 .linkContainer {
@@ -23,7 +36,7 @@
   margin: 10px;
   width: 25%;
   text-align: center;
-  font-size: large;
+  font-size: 20pt;
   font-weight: lighter;
   cursor: pointer;
   transition: font-weight 0.1s;
@@ -40,7 +53,7 @@
   margin-bottom: 50px;
 }
 .todayHeader {
-  font-size: larger;
+  font-size: 20pt;
   font-weight: lighter;
   text-align: center;
   margin-bottom: 20px;
@@ -48,13 +61,28 @@
 .todayInfo {
   display: flex;
 }
+.todayTempContainer {
+  display: flex;
+  flex-direction: column;
+}
 .todayIcon {
   width: 150px;
   height: 150px;
+  margin-right: 20px;
+  display: block;
 }
 .todayTemp {
-  font-size: xx-large;
+  font-size: 60pt;
   font-weight: bold;
+  font-family: 'Doppio One', sans-serif;
+}
+.todayWeather {
+  font-size: 20pt;
+  font-weight: lighter;
+}
+.todayIcon path {
+  stroke: #2d4268;
+  stroke-width: 30;
 }
 /* Forecast Styles */
 .forecastContainer {
@@ -70,15 +98,26 @@
   text-align: center;
   font-weight: lighter;
 }
+.forecastDayDay {
+  font-size: 15pt;
+}
 .forecastDayTemp {
   font-weight: bold;
+  font-size: 20pt;
+  font-family: 'Doppio One', sans-serif;
 }
 .forecastIcon {
   height: 100px;
   width: 100%;
   max-width: 55px;
+  display: block;
+  margin: auto;
 }
 .forecastDayInner {
   padding: 20px;
+}
+.forecastIcon path {
+  stroke: #2d4268;
+  stroke-width: 50;
 }
 /*# sourceMappingURL=App.css.map */
