--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #eef6fb;
+  color: #34343a;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-.container {
-  background-color: #eef6fb;
-  border: 5px solid white;
-  width: 90%;
-  height: 200px;
 }
 /*# sourceMappingURL=index.css.map */
