--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,11 @@
 .linkContainer {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .link {
   margin: 10px;
-  width: 25%;
+  width: 175px;
   text-align: center;
   font-size: 20pt;
   font-weight: lighter;
